2010-01-06  MORITA Hajime  <morrita@gmail.com>

Reviewed by Nikolas Zimmermann.

        SVG background color on selected text goes wrong when text has
        gradient stroke.
        https://bugs.webkit.org/show_bug.cgi?id=33069

        Introduced SVGTextPaintSubphase like as PaintPhase on html painting,
        and paint background and foreground in separate subphase.

        * svg/text/selection-background-color.xhtml: Added.
        * platform/mac/svg/text/selection-background-color-expected.checksum: Added.
        * platform/mac/svg/text/selection-background-color-expected.png: Added.
        * platform/mac/svg/text/selection-background-color-expected.txt: Added.

        * platform/mac/svg/W3C-SVG-1.1/text-text-03-b-expected.checksum:
        * platform/mac/svg/W3C-SVG-1.1/text-text-03-b-expected.png:
        * platform/mac/svg/batik/text/textDecoration2-expected.checksum:
        * platform/mac/svg/batik/text/textDecoration2-expected.png:
        * platform/mac/svg/text/text-deco-01-b-expected.checksum:
        * platform/mac/svg/text/text-deco-01-b-expected.png:
        * platform/mac/svg/text/text-spacing-01-b-expected.checksum:
        * platform/mac/svg/text/text-spacing-01-b-expected.png:
        * platform/mac/svg/text/text-text-03-b-expected.checksum:
        * platform/mac/svg/text/text-text-03-b-expected.png:
        * platform/mac/svg/text/text-text-08-b-expected.checksum:
        * platform/mac/svg/text/text-text-08-b-expected.png:
        Re-baselined due to painting algorithm change.
2010-01-06  MORITA Hajime  <morrita@gmail.com>

        Reviewed by Nikolas Zimmermann.

        SVG background color on selected text goes wrong when text has
        gradient stroke.
        https://bugs.webkit.org/show_bug.cgi?id=33069

        Introduced SVGTextPaintSubphase like as PaintPhase on html painting,
        and paint background and foreground in separate subphase.

        Test: svg/text/selection-background-color.xhtml

        * rendering/SVGCharacterLayoutInfo.h:
        (WebCore::SVGTextChunkWalker::SVGTextChunkWalker):
        Added m_setupBackgroundCallback, m_setupForegroundCallback
        (WebCore::SVGTextChunkWalker::setupBackground):
        (WebCore::SVGTextChunkWalker::setupForeground):
        Added.
        * rendering/SVGInlineTextBox.cpp:
        (WebCore::SVGInlineTextBox::paintCharacters):
        pass SVGTextPaintInfo instead of SVGPaintServer
        * rendering/SVGInlineTextBox.h:
        (WebCore::SVGTextPaintSubphase):
        (WebCore::SVGTextPaintInfo::SVGTextPaintInfo):
        Added.
        * rendering/SVGRootInlineBox.cpp:
        (WebCore::SVGRootInlineBox::walkTextChunks):
        Invoke setupBackground() and setupForeground()
        (WebCore::SVGRootInlineBoxPaintWalker::chunkSetupBackgroundCallback):
        (WebCore::SVGRootInlineBoxPaintWalker::chunkSetupForegroundCallback):
        (WebCore::SVGRootInlineBoxPaintWalker::activePaintServer):
        Added.
        (WebCore::SVGRootInlineBoxPaintWalker::chunkSetupFillCallback):
        (WebCore::SVGRootInlineBoxPaintWalker::chunkSetupStrokeCallback):
        (WebCore::SVGRootInlineBoxPaintWalker::chunkPortionCallback):
        (WebCore::SVGRootInlineBox::paint):

Canonical link: https://commits.webkit.org/44316@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52904 268f45cc-cd09-0410-ab3c-d52691b4dbfc